# cpp_hw

./: CMakeLists.txt  README.md
task 1/: Group.cpp  Group.h  task_1.cpp
task 2/: TypeList.h  TypeList.hpp  task_2.cpp
task 3/: TypeMap.cpp  TypeMap.h  TypeMap.hpp  task_3.cpp
task 4/: counter.hpp  lcs.hpp
task 5/: Log.cpp  Log.h  task_5.cpp
task 7/: task_7.cpp
task 8/: task_8.cpp
